--- a/templates/includes/navbar_dynamic.html
+++ b/templates/includes/navbar_dynamic.html
@@ -9,6 +9,11 @@
                 <i class="fas fa-chart-line"></i><span class="nav-text">لوحة الإدارة</span>
             </a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'audit:audit_log_list' %}">
+                <i class="fas fa-shield-alt"></i><span class="nav-text">سجل التدقيق</span>
+            </a>
+        </li>
     {% endif %}
     {% for key, item in navbar_departments.items %}
         {% if item.units %}
