--- a/installation_accounting/templates/installation_accounting/reports.html
+++ b/installation_accounting/templates/installation_accounting/reports.html
@@ -70,6 +70,10 @@
                                        class="btn btn-outline-secondary">
                                         <i class="fas fa-redo me-1"></i> إعادة تعيين
                                     </a>
+                                    <a href="{% url 'reports:ranking' %}?type=installations&date_from={{ filters.date_from }}&date_to={{ filters.date_to }}"
+                                       class="btn btn-warning">
+                                        <i class="fas fa-trophy me-1"></i> ترتيب الفنيين
+                                    </a>
                                 </div>
                             </div>
                         </form>
